# siga

./: .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  README  README.md  autogen.sh  configure.ac  siga.h.in
benchmark/: Makefile.am  contigs_mapping.py  dna_utils.py  fasta.py  fastq.py  graphviz.awk  paired_read_batch.sh  paired_read_gen.py  paired_read_gen.sh  paired_read_siga.sh  paired_read_spades.sh  siga_oview.py
docs/: CMakeLists.txt  CNAME  Gemfile  Makefile.am  README.md  _config.yml  index.md  siga.1
docs/_layouts/: Makefile.am  default.html
examples/: Makefile.am  siga-ecoli-miseq.sh
m4/: Makefile.am
src/: CMakeLists.txt  Makefile.am  alphabet.h  asqg.cpp  asqg.h  assembler.cpp  assembler.h  bigraph.cpp  bigraph.h  bigraph_search.cpp  bigraph_search.h  bigraph_visitors.cpp  bigraph_visitors.h  bigraph_walk.cpp  bigraph_walk.h  bucket_sort.h  bwt.cpp  bwt.h  constant.h  coord.cpp  coord.h  correct.cpp  correct_processor.cpp  correct_processor.h  dump.cpp  fmindex.cpp  fmindex.h  gan.cpp  gapfiller.cpp  indexer.cpp  kmerdistr.cpp  kmerdistr.h  kseq.cpp  kseq.h  log4cxx.properties  main.cpp  match.cpp  mkqs.h  mlpack.h  overlap.cpp  (+24 more)
test/: CMakeLists.txt  Makefile.am  alphabet_test.cpp  assemble_test.cpp  index_test.cpp  overlap_test.cpp  parallel_test.cpp  preprocess_test.cpp  utils_test.cpp
