bin_PROGRAMS=arcs
arcs_SOURCES=assembler.cpp \
			 asqg.cpp \
			 asqg.h \
			 bigraph.cpp \
			 bigraph.h \
			 bigraph_search.cpp \
			 bigraph_search.h \
			 bigraph_visitors.cpp \
			 bigraph_visitors.h \
			 bigraph_walk.cpp \
			 bigraph_walk.h \
			 bwt.cpp \
			 bwt.h \
			 constant.cpp \
			 constant.h \
			 correct.cpp \
			 coord.cpp \
			 coord.h \
			 fmindex.cpp \
			 fmindex.h \
			 gapfiller.cpp \
			 indexer.cpp \
			 kseq.cpp \
			 kseq.h \
			 mkqs.h \
			 overlap.cpp \
			 overlap_builder.cpp \
			 overlap_builder.h \
			 preprocess.cpp \
			 primer_screen.cpp \
			 primer_screen.h \
			 runner.h \
			 sequence_process_framework.h \
			 scaffold.cpp \
			 suffix_array.cpp \
			 suffix_array.h \
			 suffix_array_builder.cpp \
			 suffix_array_builder.h \
			 utils.cpp \
			 utils.h \
			 main.cpp
arcs_CXXFLAGS=${LOG4CXX_CFLAGS}
arcs_LDFLAGS=${LOG4CXX_LIBS} \
			 -lboost_filesystem \
			 -lboost_iostreams \
			 -lboost_system

EXTRA_DIST=log4cxx.properties

